Fix: Handled Unrequired Spacing for Price List and Info Box Headings (#2896)

--- a/src/blocks/info-box/style.scss
+++ b/src/blocks/info-box/style.scss
@@ -236,6 +236,10 @@ a.uagb-infobox-link-wrap:hover,
 	width: 100%;
 }
 
+.uagb-ifb-title {
+	margin-block-start: 0;
+}
+
 .uagb-ifb-title-wrap .uagb-ifb-title-prefix {
 	display: block;
 	padding: 0;
